--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<modules>
 		<module>students</module>
 		<module>courses</module>
+		<module>fetcher</module>
 	</modules>
 	<name>dashboard</name>
 	<description>Demo project for Spring Boot</description>
