--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<jvmArguments>-Xms2048m -Xmx3072m</jvmArguments>
 				</configuration>
 			</plugin>
 		</plugins>
