--- a/fetcher/pom.xml
+++ b/fetcher/pom.xml
@@ -32,4 +32,10 @@
         </dependency>
     </dependencies>
 
+    <!-- <build>
+        <configuration>
+                <jvmArguments>-Xms1024m -Xmx2048m</jvmArguments>
+        </configuration>
+    </build> -->
+
 </project>
